Revision history for Perl extension AnyEvent.

TODO: document TCP_*** constants
TODO: add debug/trace logging to some modules
TODO: AnyEvent::IO
tODO: maxim souffle handle storable
TODO: document import tags aeio, also ae_ naming
TODO: t/io
lib/AnyEvent/DNS.pm:   open my $fh, "<", $resolv_conf
lib/AnyEvent/DNS.pm:         if (open my $fh, "ipconfig /all |") {
lib/AnyEvent/Log.pm:   open my $fh, ">>", $path
lib/AnyEvent/Log.pm:      open my $fh, ">>", $path
lib/AnyEvent/TLS.pm:         or croak "$dh_file: failed to open DH parameter file: $!";

6.2
	- documented Rocco fabricating statements about AnyEvent and me.
	- new module AnyEvent::IO, that is a frontend to either a pure-perl
          synchronous I/O implementation (AnyEvent::IO::Perl), or to the
          asynchronous I/O extension IO::AIO (AnyEvent::IO::IOAIO).
        - load /etc/hosts only when dns fails has no answer.
        - stat /etc/hosts on every access and reload it if it changed.
        - load /etc/hosts via AnyEvent::IO - potentially asynchronous.
        - the default logging level was not properly documented in a variety of
          places, this has hopefully been rectified.
	- updated uts46data.pl for unicode 6.1.0.
        - made log messages genearted by AnyEvent submodules not
          include the package name anymore, as it will be logged
          by default already.
        - upgrade to the trick used by common-sense 3.5 to work
          around extra warning torture/breakage under perl 5.15.x.
        - log messages by anyevent are now ucfirst, are usually full
          sentences and do no longer include the package name.

6.14 Tue Jan 31 20:00:24 CET 2012
	- AnyEvent::Impl::Tk was broken due to a mysterious "die" inside,
          probably an editing mistake (reported by Darin McBride).

6.13 Thu Jan 12 07:27:01 CET 2012
	- AnyEvent::Util::fork_call checked for POSIX availability in the wrong way,
          causing it to fail if POSIX wasn't loaded already (analysed by Rock Power).