@@ -6,6 +6,7 @@ TODO: AnyEvent::IO
 tODO: maxim souffle handle storable
 TODO: document import tags aeio, also ae_ naming
 TODO: t/io
+TODO: use the eval-with-cb-call trick also to speed up JSON?
 lib/AnyEvent/DNS.pm:   open my $fh, "<", $resolv_conf
 lib/AnyEvent/DNS.pm:         if (open my $fh, "ipconfig /all |") {
 lib/AnyEvent/Log.pm:   open my $fh, ">>", $path
@@ -13,7 +14,6 @@ lib/AnyEvent/Log.pm:      open my $fh, ">>", $path
 lib/AnyEvent/TLS.pm:         or croak "$dh_file: failed to open DH parameter file: $!";
 
 6.2
-	- documented Rocco fabricating statements about AnyEvent and me.
 	- new module AnyEvent::IO, that is a frontend to either a pure-perl
           synchronous I/O implementation (AnyEvent::IO::Perl), or to the
           asynchronous I/O extension IO::AIO (AnyEvent::IO::IOAIO).
@@ -30,6 +30,9 @@ lib/AnyEvent/TLS.pm:         or croak "$dh_file: failed to open DH parameter fil
           around extra warning torture/breakage under perl 5.15.x.
         - log messages by anyevent are now ucfirst, are usually full
           sentences and do no longer include the package name.
+        - the storable read type would sometimes throw an exception instead
+          of causing EBADMSG (analyzed by Maxime Soulé).
+	- documented Rocco fabricating statements about AnyEvent and me.
 
 6.14 Tue Jan 31 20:00:24 CET 2012
 	- AnyEvent::Impl::Tk was broken due to a mysterious "die" inside,
